# platformIO_AVR

Uno_Register_Test/: README.md  firmware.lss  platformio.ini  post_build.py
Uno_Register_Test/backup/: 4-1_arduino.cpp  UART1.c  adc_comparator.c  adc_resistor.cpp  dht11_avr.c  main.cpp  main_avr_c.cpp  sg90.c  softwareSerial.cpp  uart0_main.c  uart1_main.c
Uno_Register_Test/backup/dht11/: dht11.cpp  dht11_interrupt.c
Uno_Register_Test/backup/i2c/: 17-lcd1602.c  i2c.c  i2c.h  i2c_scanner.c  lcd1602_i2c.c  lcd1602_i2c.h  lcd_blink.c  lcd_main.cpp  my_i2c.c  my_i2c.h  my_i2c_main.c  my_uart.c  my_uart.h
Uno_Register_Test/backup/interrupt/: adc_interrupt.c  interrupt.c  timer_interrupt.c
Uno_Register_Test/backup/led/: main.cpp  tact_switch.cpp  task_main.cpp  wdt_interrupt.c
Uno_Register_Test/backup/no_delay_function/: main_only_c.cpp  main_use_millis_func.cpp
Uno_Register_Test/backup/rfid/: mfrc522.c  mfrc522.h  rfid.cpp  rfid_custom.c
Uno_Register_Test/backup/spi/: spi.c  spi.h
Uno_Register_Test/backup/uart/: 4-1.c  UART1.h
Uno_Register_Test/include/: UART0.h
Uno_Register_Test/serial_monitor/: 9-10.c  CMakeLists.txt  main.c
Uno_Register_Test/src/: UART0.c  UART0.h  gps_main.c  neo6m_gps.c  neo6m_gps.h  softwareSerial_no_Intterupt.c  task_main.cpp  watchdog_timer_interrupt.c
